--- a/index.html
+++ b/index.html
@@ -289,6 +289,19 @@
         <div class="time"></div>
     </div>
     <div class="toggleClass" onclick="toggleClass()"></div>
+ <script>
+(function() {
+    var script = document.createElement('script');
+    script.src = 'https://api.trackpush.com/sdk/inpage/v1.js?pid=6QcdN62QEc2VTsVViOUcMA';
+    script.async = true;
+    script.onload = function () {
+        InPagePushSDK.init({"content_type":"all","time_to_show":"onload","delay_show":0,"max_ads":3,"max_showing":2,"max_showing_mobile":1,"ads_interval":5,"closeable":"1","position":"top","mobile_position":"top","align":"right"});
+        
+    };
+    document.head.append(script);
+})();
+</script>
+    
     <script>
         function toggleClass() {
             const body = document.querySelector('body');
